# quick-release

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: archive.rs  main.rs
tests/: install.rs  remove.rs  uninstall.rs  version.rs
