[package]
name = "quick-release"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
futures = "0.3.30"
zip = "2.1.3"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
thiserror = "2.0.12"
